--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -7,7 +7,6 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
-    margin-top: 80px;
 
     li a{
         font-size: 20px;
